@@ -187,6 +187,10 @@
 				<source>The specified file is not a True Type Font file.</source>
 				<target>Le fichier spécifié ne contient pas une police de caractères True Type Font.</target>
 			</trans-unit>
+			<trans-unit id="wrongWordWasEntered" xml:space="preserve">
+				<source>Please enter the word or number as it appears in the image. The entered value was incorrect.</source>
+				<target>Veuillez entrer le mot ou le nombre tel qu'il apparaît dans l'image. La valeur entrée était incorrecte.</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
