@@ -138,6 +138,9 @@
 			<trans-unit id="9221561047" xml:space="preserve">
 				<source>The specified file is not a True Type Font file.</source>
 			</trans-unit>
+			<trans-unit id="wrongWordWasEntered" xml:space="preserve">
+				<source>Please enter the word or number as it appears in the image. The entered value was incorrect.</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
