@@ -1,3 +1,7 @@
+2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Add captcha validator class
+
 2012-12-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Migrate backend GD font maker to extbase
